<resources>
    <string name="app_name">NewGenSociety</string>
    <string name="committee_member">Committee Member</string>
    <string name="society_member">Society Member</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="login">Login</string>
    <string name="state">State</string>
    <string name="City" />
    <string name="city">city</string>
    <string name="name" />
    <string name="massage" />
    <string name="Name">Name</string>
    <string name="publish_notice">Publish Notice</string>
    <string name="subject">Subject :</string>
    <string name="namew">~</string>
    <string name="dash">________________________________________________________</string>
    <string name="add_discount_if_person_paid_before_due_date">Add Discount if person paid before Due date</string>
    <string name="maintenence">Maintenence</string>
    <string name="pay_your_maintenance_before_due_and_get">Pay Your Maintenance Before Due And Get</string>
    <string name="flat_number">Flat Number :</string>
    <string name="flat_no">Flat No</string>
    <string name="you_are_not_committee_member">You are Not Committee Member</string>
    <string name="sorry">Sorry!!</string>
    <string name="contact">Contact</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.example.myapp</string>
    <string name="committee_member_name">Committee Member name</string>
    <string name="pay_now">Pay Now</string>
    <string name="paid_on_31_feb_2025">paid on 31-feb-2025</string>
    <string name="upi_id">Upi ID</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_image">select image</string>
    <string name="maintenance_payment">Maintenance Payment</string>
    <string name="flat_no_101">Flat No : 101</string>
    <string name="make_sure_to_share_you_payment_details_with_your_society_secretory_for_varification">make sure to share your payment details with your society secretary for varification</string>
    <string name="meetings">Meetings</string>
    <string name="maintennce">Maintennce</string>
    <string name="maintenance">maintenance</string>
    <string name="help_requests">Help Requests</string>
    <string name="complains">Complains</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="flats">Flats</string>
    <string name="All">All Flats</string>
    <string name="all_flat">All Flat</string>
    <string name="maintenance1">Maintenance</string>
    <string name="society_hall">Society Hall</string>
    <string name="description">Description</string>
    <string name="add_new_society">Add New Society</string>
    <string name="login_as_committee_member">Login as Committee Member</string>
    <string name="society_hall1">Society Hall</string>
    <string name="amenities">Amenities</string>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="array_goa_districts">
        <item>Select Your District</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="array_gujarat_districts">
        <item>Select Your District</item>
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Aravalli</item>
        <item>Banaskantha</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Botad</item>
        <item>Chhota Udaipur</item>
        <item>Dahod</item>
        <item>Dang</item>
        <item>Devbhoomi Dwarka</item>
        <item>Gandhinagar</item>
        <item>Gir Somnath</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kheda</item>
        <item>Kutch</item>
        <item>Mahisagar</item>
        <item>Mehsana</item>
        <item>Morbi</item>
        <item>Narmada</item>
        <item>Navsari</item>
        <item>Panchmahal</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Sabarkantha</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Tapi</item>
        <item>Vadodara</item>
        <item>Valsad</item>
    </string-array>
    <string-array name="array_haryana_districts">
        <item>Select Your District</item>
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Charkhi Dadri</item>
        <item>Faridabad</item>
        <item>Fatehabad</item>
        <item>Gurugram</item>
        <item>Hisar</item>
        <item>Jhajjar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Mahendragarh</item>
        <item>Mewat</item>
        <item>Palwal</item>
        <item>Panchkula</item>
        <item>Panipat</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat</item>
        <item>Yamunanagar</item>
    </string-array>
    <string-array name="array_himachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Bilaspur</item>
        <item>Chamba</item>
        <item>Hamirpur</item>
        <item>Kangra</item>
        <item>Kinnaur</item>
        <item>Kullu</item>
        <item>Lahaul Spiti</item>
        <item>Mandi</item>
        <item>Shimla</item>
        <item>Sirmaur</item>
        <item>Solan</item>
        <item>Una</item>
    </string-array>
</resources>