<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Committee_NoticePubllishing_Page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish_notice"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textSize="30sp"
        android:textColor="@color/teal_700"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginLeft="@dimen/_10sdp" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/Committee_NoticePublish_CMname"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Subject"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Committee_NoticePublish_Subject"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/massage"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Committee_NoticePublish_Notice"
            android:lines="10"
            android:gravity="top"
            android:hint="Notice"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Committee_Notice_btnPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/_15sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:text="Publish"
        android:layout_gravity="right"
        android:paddingLeft="@dimen/_10sdp">

    </Button>








</LinearLayout>