<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Maintenance_Payment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/toolbar"
        android:gravity="center"
        android:elevation="4dp"
        android:paddingLeft="20dp"
        android:background="#BEDFFA"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

    <ImageView
        android:id="@+id/Back_btn"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:paddingRight="20dp"
        android:layout_gravity="left"
        android:src="@drawable/baseline_arrow_back_24"/>


    <TextView
        android:layout_width="wrap_content"
        android:text="Payment"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_height="wrap_content">

    </TextView>

    </Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_180sdp"
        app:cardCornerRadius="0dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintenance_payment"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:drawablePadding="@dimen/_13sdp"
                android:drawableRight="@drawable/cash"
                android:textColor="#800000">

            </TextView>

            <TextView
                android:id="@+id/Maintenance_Payment_flat_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat_no_101"
                android:layout_marginTop="@dimen/_6sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black">

            </TextView>

            <TextView
                android:id="@+id/Maintenance_Payment_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name : Harish Sanjay Taskar"
                android:layout_marginTop="@dimen/_6sdp"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Due On : "
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/Maintenance_Payment_DueDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="31 march 2023"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Amount "
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/Maintenance_Payment_Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2500.00"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Discount "
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/Maintenance_Payment_Dis_Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="150.00"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:dividerColor="@color/black"
                android:layout_marginTop="@dimen/_4sdp">

            </com.google.android.material.divider.MaterialDivider>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Payable Amount "
                    android:textStyle="bold"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

                <TextView
                    android:id="@+id/Maintenance_Payment_Payable_Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2350.00"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/black">

                </TextView>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Maintenance_Payment_btn_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="#FFC107"
                android:text="Pay">



            </Button>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_sure_to_share_you_payment_details_with_your_society_secretory_for_varification">

            </TextView>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>